[project]
name = "fgo-support-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "opencv-contrib-python>=4.11.0.86",
    "orjson>=3.10.15",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
]
