[project]
name = "fgo-support-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "opencv-contrib-python>=4.11.0.86",
    "orjson>=3.10.15",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.5",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
